# ros2_flower_rl

./: .gitignore  README.md  build.sh  launch.sh  requirements.txt  setup.sh  setup.zsh
misc/: README.md  dqn_gym_server.py  mnist_training.ipynb  toy_fl_server.py
misc/common/: nn.py
ros2_flower_bridge/: package.xml  setup.cfg
ros2_flower_bridge/ros2_flower_bridge/: thread_client.py  timer_client.py
src/flower_subscriber/: package.xml  setup.cfg  setup.py
src/flower_subscriber/flower_subscriber/: fl_subscriber.py  flwr_client.py
src/launcher/: package.xml  setup.cfg  setup.py
src/launcher/launch/: dqn_gym_launch.py  toy_frl_cartpole.py  toy_frl_cartpole_launch.py  toy_problem_launch.py
src/ml_interfaces/: CMakeLists.txt  package.xml
src/ml_interfaces/msg/: FeatureLabelPair.msg  FloatTensor.msg  Knowledge.msg  KnowledgeShard.msg  Transition.msg
src/ml_interfaces/srv/: ControllerService.srv  Gym.srv  GymService.srv  PolicyService.srv  SampleFeatureLabelPair.srv  SampleTransition.srv
src/ml_interfaces_py/: package.xml  setup.cfg  setup.py
src/ml_interfaces_py/ml_interfaces_py/: __init__.py  lib.py
src/ml_interfaces_py/test/: test_wrappers.py
src/replay_buffer/: CMakeLists.txt  package.xml
src/replay_buffer/src/: replay_buffer.cpp  supervised_replay_buffer.cpp  transition_replay_buffer.cpp
src/ros2_flower_bridge/: setup.py
src/ros2_flower_bridge/ros2_flower_bridge/: __init__.py  interface.py  (+2 more)
src/toy_fl/: package.xml  setup.cfg  setup.py
src/toy_fl_publisher/: package.xml  setup.cfg  setup.py
src/toy_frl/: package.xml  setup.cfg  setup.py
(+28 files in other folders)
